Cargar videos ulitmos subidos

--- a/src/main/resources/ventanas/Videos_usuarios_registrados_ventanas.html
+++ b/src/main/resources/ventanas/Videos_usuarios_registrados_ventanas.html
@@ -14,7 +14,7 @@
     </vaadin-label>
    </vaadin-form-layout>
    <vaadin-panel width="70%">
-    <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="videos_ultimos_subidos_layout">
+    <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical">
      <ventanas-lista_videos_ventanas></ventanas-lista_videos_ventanas>
     </vaadin-vertical-layout>
    </vaadin-panel>
