--- a/src/main/resources/ventanas/Videos_relacionados_ventanas.html
+++ b/src/main/resources/ventanas/Videos_relacionados_ventanas.html
@@ -13,8 +13,8 @@
       Videos relacionados 
     </vaadin-label>
    </vaadin-form-layout>
-   <vaadin-panel width="70%">
-    <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="videos_ultimos_subidos_layout">
+   <vaadin-panel width="70%" _id="panel">
+    <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical">
      <ventanas-lista_videos_ventanas></ventanas-lista_videos_ventanas>
     </vaadin-vertical-layout>
    </vaadin-panel>
