--- a/src/main/resources/ventanas/Ficha_video_ventanas.html
+++ b/src/main/resources/ventanas/Ficha_video_ventanas.html
@@ -3,13 +3,13 @@
  <head>
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
-  <meta name="vaadin-version" content="8.0.5">
+  <meta name="vaadin-version" content="8.1.5">
  </head>
  <body>
   <vaadin-vertical-layout responsive>
    <vaadin-panel size-auto>
     <vaadin-vertical-layout responsive size-auto>
-     <vaadin-video responsive width="800px" height-full></vaadin-video>
+     <vaadin-horizontal-layout width-full _id="layoutReproductor"></vaadin-horizontal-layout>
      <vaadin-horizontal-layout responsive width-full margin-left margin-right>
       <vaadin-label responsive plain-text _id="titulo_video">
         Título video 
