Se actualizan diagramas de secuencias, se añade seguir usuario, Listas de producion, se actualizo la interfaz de la ventana de perfil visitante

--- a/src/main/resources/ventanas/Ficha_propietario_ventanas.html
+++ b/src/main/resources/ventanas/Ficha_propietario_ventanas.html
@@ -8,7 +8,7 @@
  </head>
  <body>
   <vaadin-vertical-layout>
-   <vaadin-vertical-layout spacing="false" margin="false" _id="vertical" :center>
+   <vaadin-vertical-layout spacing="false" margin="false" _id="vertical">
     <ventanas-zona_cabecera_video_propietario_ventanas _id="zonaCabecera"></ventanas-zona_cabecera_video_propietario_ventanas>
    </vaadin-vertical-layout>
    <vaadin-form-layout size-auto margin="false" _id="form">
