--- a/src/main/resources/ventanas/Zona_cabecera_video_propietario_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_video_propietario_ventanas.html
@@ -6,7 +6,7 @@
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
-  <vaadin-horizontal-layout width-full margin-right>
+  <vaadin-horizontal-layout width-full>
    <vaadin-horizontal-layout width-full>
     <vaadin-button style-name="huge borderless" plain-text _id="logo">
       Garbiñe Youtube_propietario 
