--- a/src/main/resources/ventanas/Zona_cuerpo_perfil_visitante_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cuerpo_perfil_visitante_ventanas.html
@@ -7,11 +7,11 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-panel size-full>
-   <vaadin-vertical-layout size-auto _id="vertical">
+  <vaadin-vertical-layout spacing="false" size-auto margin="false">
+   <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical">
     <ventanas-lista_videos_agenos_ventanas></ventanas-lista_videos_agenos_ventanas>
     <ventanas-listas_de_reproduccion_ventanas></ventanas-listas_de_reproduccion_ventanas>
    </vaadin-vertical-layout>
-  </vaadin-panel>
+  </vaadin-vertical-layout>
  </body>
 </html>
