Se añade funcionalidades y cambios en los diagramas de secuencias

--- a/src/main/resources/ventanas/Lista_historial_ventanas.html
+++ b/src/main/resources/ventanas/Lista_historial_ventanas.html
@@ -16,7 +16,7 @@
       Los últimos 10 videos vistos: 
     </vaadin-label>
     <vaadin-panel width-auto height="400px">
-     <vaadin-form-layout size-auto margin _id="formLayout">
+     <vaadin-form-layout size-auto margin _id="formLista">
       <ventanas-video_ventanas></ventanas-video_ventanas>
       <ventanas-video_ventanas></ventanas-video_ventanas>
       <ventanas-video_ventanas></ventanas-video_ventanas>
