--- a/src/main/resources/ventanas/Lista_ultimos_videos_subidos_ventanas.html
+++ b/src/main/resources/ventanas/Lista_ultimos_videos_subidos_ventanas.html
@@ -16,7 +16,7 @@
       Lista de los últimos videos subidos 
     </vaadin-label>
     <vaadin-panel width-auto height="400px">
-     <vaadin-form-layout responsive size-auto margin _id="videosFormLayout">
+     <vaadin-form-layout responsive size-auto margin _id="formLista">
       <ventanas-video_ventanas></ventanas-video_ventanas>
       <ventanas-video_ventanas></ventanas-video_ventanas>
       <ventanas-video_ventanas></ventanas-video_ventanas>
