--- a/src/main/resources/ventanas/Lista_usuarios_ventanas.html
+++ b/src/main/resources/ventanas/Lista_usuarios_ventanas.html
@@ -8,10 +8,12 @@
  </head>
  <body>
   <vaadin-vertical-layout size-auto margin="false">
-   <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
-   <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
-   <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
-   <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
+   <vaadin-vertical-layout size-auto margin="false" _id="vertical">
+    <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
+    <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
+    <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
+    <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
+   </vaadin-vertical-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
