--- a/src/main/resources/ventanas/Lista_videos_agenos_ventanas.html
+++ b/src/main/resources/ventanas/Lista_videos_agenos_ventanas.html
@@ -7,8 +7,8 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout responsive size-auto>
-   <vaadin-form-layout size-auto margin="false">
+  <vaadin-vertical-layout responsive width="70%">
+   <vaadin-form-layout size-auto margin>
     <vaadin-label plain-text _id="titulo">
       Videos subidos 
     </vaadin-label>
