--- a/src/main/resources/ventanas/Listado_suscriptores_ventanas.html
+++ b/src/main/resources/ventanas/Listado_suscriptores_ventanas.html
@@ -16,7 +16,7 @@
       Usuarios que te siguen: 
     </vaadin-label>
     <vaadin-panel width-auto height="400px">
-     <vaadin-form-layout size-auto margin>
+     <vaadin-form-layout size-auto margin _id="form">
       <ventanas-lista_usuarios_ventanas></ventanas-lista_usuarios_ventanas>
      </vaadin-form-layout>
     </vaadin-panel>
