--- a/src/main/resources/ventanas/Listas_de_reproduccion_ventanas.html
+++ b/src/main/resources/ventanas/Listas_de_reproduccion_ventanas.html
@@ -6,13 +6,13 @@
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
-  <vaadin-vertical-layout spacing="false" size-auto>
-   <vaadin-form-layout spacing="false" size-auto margin="false">
+  <vaadin-vertical-layout width="70%">
+   <vaadin-form-layout size-auto margin="false">
     <vaadin-label plain-text _id="titulo_listas_de_reproducion">
       Listas de reproducición 
     </vaadin-label>
    </vaadin-form-layout>
-   <vaadin-panel width="95%">
+   <vaadin-panel width="70%">
     <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical">
      <vaadin-horizontal-layout margin _id="horizontal">
       <vaadin-form-layout spacing="false" size-auto margin="false" _id="form">
