--- a/src/main/resources/ventanas/Suscripcion_ventanas.html
+++ b/src/main/resources/ventanas/Suscripcion_ventanas.html
@@ -9,9 +9,9 @@
  <body>
   <vaadin-horizontal-layout spacing="false">
    <vaadin-form-layout size-auto margin="false">
-    <vaadin-horizontal-layout margin>
+    <vaadin-horizontal-layout margin _id="horizontal">
      <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
-     <vaadin-button plain-text _id="dejar_de_seguir" :middle :center>
+     <vaadin-button plain-text _id="dejarDeSeguir" :bottom :center>
        Dejar de seguir 
      </vaadin-button>
     </vaadin-horizontal-layout>
