--- a/src/main/resources/ventanas/Usuario_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Usuario_administrador_ventanas.html
@@ -7,11 +7,11 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout spacing="false" margin="false">
-   <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical">
+  <vaadin-panel size-auto>
+   <vaadin-vertical-layout size-auto _id="vertical">
     <ventanas-zona_cabecera_video_administrador_ventanas _id="zcva"></ventanas-zona_cabecera_video_administrador_ventanas>
     <ventanas-zona_inicio_cuerpo_administrador_ventanas _id="zica"></ventanas-zona_inicio_cuerpo_administrador_ventanas>
    </vaadin-vertical-layout>
-  </vaadin-vertical-layout>
+  </vaadin-panel>
  </body>
 </html>
