--- a/src/main/resources/ventanas/Video_lista_reproduccion_ventanas.html
+++ b/src/main/resources/ventanas/Video_lista_reproduccion_ventanas.html
@@ -10,11 +10,11 @@
   <vaadin-vertical-layout size-full margin="false">
    <vaadin-horizontal-layout>
     <vaadin-form-layout size-auto margin="false">
-     <vaadin-vertical-layout size-auto margin="false" _id="video_lista_reproduccion_layout">
+     <vaadin-vertical-layout size-auto margin="false" _id="vertical">
       <ventanas-video_ventanas></ventanas-video_ventanas>
      </vaadin-vertical-layout>
     </vaadin-form-layout>
-    <vaadin-form-layout size-auto margin="false" :middle :center>
+    <vaadin-form-layout size-auto margin="false" _id="form" :middle :center>
      <vaadin-button plain-text _id="quitar">
        Quitar 
      </vaadin-button>
