--- a/src/main/resources/ventanas/Videos_de_suscripciones_ventanas.html
+++ b/src/main/resources/ventanas/Videos_de_suscripciones_ventanas.html
@@ -7,14 +7,14 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout size-auto>
+  <vaadin-vertical-layout width="70%">
    <vaadin-form-layout size-auto>
     <vaadin-label plain-text _id="videos_de_suscripciones">
       Videos de actividades de Suscripciones 
     </vaadin-label>
    </vaadin-form-layout>
    <vaadin-panel width="70%">
-    <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="videos_ultimos_subidos_layout">
+    <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical">
      <ventanas-lista_videos_ventanas></ventanas-lista_videos_ventanas>
     </vaadin-vertical-layout>
    </vaadin-panel>
