--- a/src/main/resources/ventanas/Videos_relacionados_ventanas.html
+++ b/src/main/resources/ventanas/Videos_relacionados_ventanas.html
@@ -7,7 +7,7 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout responsive size-auto>
+  <vaadin-vertical-layout responsive width="70%">
    <vaadin-form-layout size-auto>
     <vaadin-label plain-text _id="videos_relacionados">
       Videos relacionados 
