--- a/src/main/resources/ventanas/Videos_usuarios_registrados_ventanas.html
+++ b/src/main/resources/ventanas/Videos_usuarios_registrados_ventanas.html
@@ -7,7 +7,7 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout size-auto>
+  <vaadin-vertical-layout width="70%">
    <vaadin-form-layout size-auto>
     <vaadin-label plain-text _id="videos_usuarios_registrados">
       Videos ultimos subidos por "usuarios registrados" 
