--- a/src/main/resources/ventanas/Zona_cabecera_comun_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_comun_ventanas.html
@@ -10,13 +10,13 @@
    <vaadin-horizontal-layout>
     <vaadin-horizontal-layout></vaadin-horizontal-layout>
     <vaadin-form-layout size-auto>
-     <vaadin-label plain-text>
+     <vaadin-button style-name="huge borderless borderless-colored" plain-text _id="logo">
        Garbiñe Youtube 
-     </vaadin-label>
+     </vaadin-button>
     </vaadin-form-layout>
     <vaadin-horizontal-layout>
      <vaadin-form-layout spacing="false" size-auto margin>
-      <vaadin-label style-name="colored h1" plain-text>
+      <vaadin-label style-name="colored h1" plain-text _id="nVisitas">
         50 
       </vaadin-label>
       <vaadin-label plain-text>
@@ -26,7 +26,7 @@
     </vaadin-horizontal-layout>
     <vaadin-horizontal-layout>
      <vaadin-form-layout spacing="false" size-auto margin>
-      <vaadin-label style-name="colored h1" plain-text _id="n_suscriptores">
+      <vaadin-label style-name="colored h1" plain-text _id="nSuscriptores">
         10 
       </vaadin-label>
       <vaadin-label plain-text>
@@ -39,7 +39,7 @@
     </vaadin-horizontal-layout>
     <vaadin-horizontal-layout>
      <vaadin-form-layout spacing="false" size-auto margin>
-      <vaadin-label style-name="colored h1" plain-text _id="n_suscripciones">
+      <vaadin-label style-name="colored h1" plain-text _id="nSuscripciones">
         100 
       </vaadin-label>
       <vaadin-label plain-text>
