--- a/src/main/resources/ventanas/Zona_cabecera_perfli_Registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_perfli_Registrado_ventanas.html
@@ -7,7 +7,7 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout size-full>
+  <vaadin-vertical-layout>
    <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical" :center>
     <ventanas-zona_cabecera_comun_ventanas _id="zcv"></ventanas-zona_cabecera_comun_ventanas>
    </vaadin-vertical-layout>
