--- a/src/main/resources/ventanas/Zona_cuerpo_perfil_visitante_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cuerpo_perfil_visitante_ventanas.html
@@ -7,8 +7,8 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout spacing="false" size-auto margin="false">
-   <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical">
+  <vaadin-vertical-layout spacing="false" responsive margin="false">
+   <vaadin-vertical-layout spacing="false" margin="false" _id="vertical">
     <ventanas-lista_videos_agenos_ventanas></ventanas-lista_videos_agenos_ventanas>
     <ventanas-listas_de_reproduccion_ventanas></ventanas-listas_de_reproduccion_ventanas>
    </vaadin-vertical-layout>
