--- a/src/main/resources/ventanas/Zona_inicio_cuerpo_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Zona_inicio_cuerpo_administrador_ventanas.html
@@ -7,8 +7,8 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout size-full>
-   <vaadin-vertical-layout size-auto _id="vertical">
+  <vaadin-vertical-layout margin="false">
+   <vaadin-vertical-layout margin="false" _id="vertical2">
     <ventanas-zona_inicio_comun_ventanas></ventanas-zona_inicio_comun_ventanas>
    </vaadin-vertical-layout>
   </vaadin-vertical-layout>
