--- a/src/main/resources/ventanas/Zona_inicio_cuerpo_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_inicio_cuerpo_registrado_ventanas.html
@@ -7,8 +7,8 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout spacing="false" responsive size-auto margin="false">
-   <vaadin-vertical-layout size-auto _id="vertical">
+  <vaadin-vertical-layout spacing="false" responsive margin="false">
+   <vaadin-vertical-layout spacing="false" margin="false" _id="vertical">
     <ventanas-videos_tendencias_ventanas responsive></ventanas-videos_tendencias_ventanas>
     <ventanas-videos_de_suscripciones_ventanas responsive></ventanas-videos_de_suscripciones_ventanas>
     <ventanas-videos_relacionados_ventanas responsive></ventanas-videos_relacionados_ventanas>
