--- a/src/main/resources/ventanas/Zona_opciones_video_propietario_ventanas.html
+++ b/src/main/resources/ventanas/Zona_opciones_video_propietario_ventanas.html
@@ -6,22 +6,26 @@
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
-  <vaadin-form-layout size-auto margin>
-   <vaadin-button icon="fonticon://Vaadin-Icons/e780" plain-text _id="me_gusta">
-     Me gusta 
-   </vaadin-button>
-   <vaadin-button icon="fonticon://Vaadin-Icons/e6f0" plain-text _id="descargar">
-     Descargar 
-   </vaadin-button>
-   <vaadin-button icon="fonticon://Vaadin-Icons/e7ff" plain-text _id="crear_lista_reproduccion">
-     Crear lista reproducción 
-   </vaadin-button>
-   <vaadin-button icon="fonticon://Vaadin-Icons/e656" plain-text _id="anadir_lista">
-     Añadir a lista de reproducción 
-   </vaadin-button>
-   <vaadin-button icon="fonticon://Vaadin-Icons/e811" plain-text _id="eliminar">
-     Eliminar 
-   </vaadin-button>
-  </vaadin-form-layout>
+  <vaadin-vertical-layout style-name="form" size-auto>
+   <vaadin-form-layout size-auto margin _id="form">
+    <vaadin-button icon="fonticon://Vaadin-Icons/e780" plain-text _id="me_gusta">
+      Me gusta 
+    </vaadin-button>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e6f0" plain-text _id="descargar">
+      Descargar 
+    </vaadin-button>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e7ff" plain-text _id="crear_lista_reproduccion">
+      Crear lista reproducción 
+    </vaadin-button>
+    <vaadin-native-select data-item-type="java.lang.String" _id="sample">
+     <option item="Option1">Option 1</option>
+     <option item="Option2">Option 2</option>
+     <option item="Option3">Option 3</option>
+    </vaadin-native-select>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e811" plain-text _id="eliminar">
+      Eliminar 
+    </vaadin-button>
+   </vaadin-form-layout>
+  </vaadin-vertical-layout>
  </body>
 </html>
