--- a/src/main/resources/ventanas/Listado_suscripciones_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Listado_suscripciones_registrado_ventanas.html
@@ -13,10 +13,10 @@
       Canales a los que estoy suscrito 
     </vaadin-label>
     <vaadin-label plain-text _id="subtitulo">
-      Usuarios a lso que sigues 
+      Usuarios a los que sigues 
     </vaadin-label>
     <vaadin-panel width-auto height="400px">
-     <vaadin-form-layout size-auto margin="false">
+     <vaadin-form-layout size-auto margin="false" _id="form">
       <ventanas-suscripcion_ventanas></ventanas-suscripcion_ventanas>
       <ventanas-suscripcion_ventanas></ventanas-suscripcion_ventanas>
       <ventanas-suscripcion_ventanas></ventanas-suscripcion_ventanas>
