--- a/src/main/resources/ventanas/Perfil_visitante_ventanas.html
+++ b/src/main/resources/ventanas/Perfil_visitante_ventanas.html
@@ -7,7 +7,7 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-panel size-full>
+  <vaadin-panel size-auto>
    <vaadin-vertical-layout size-auto _id="vertical">
     <ventanas-zona_cabecera_perfil_visitante_ventanas></ventanas-zona_cabecera_perfil_visitante_ventanas>
     <ventanas-zona_cuerpo_perfil_visitante_ventanas></ventanas-zona_cuerpo_perfil_visitante_ventanas>
