--- a/src/main/resources/ventanas/Usuario_ventanas.html
+++ b/src/main/resources/ventanas/Usuario_ventanas.html
@@ -9,12 +9,10 @@
   <vaadin-vertical-layout size-auto>
    <vaadin-horizontal-layout>
     <vaadin-form-layout size-auto margin="false">
-     <vaadin-button width="180px" height="150px" plain-text _id="imagen">
-       No imagen 
-     </vaadin-button>
+     <vaadin-image width="180px" height="150px" _id="imagen"></vaadin-image>
     </vaadin-form-layout>
     <vaadin-form-layout spacing="false" size-auto margin="false" :bottom :right :expand="0.1">
-     <vaadin-label plain-text _id="nombre_usuario">
+     <vaadin-label plain-text _id="nombre">
        Nombre Apellidos1 Apellidos2 
      </vaadin-label>
     </vaadin-form-layout>
