--- a/src/main/resources/ventanas/Zona_cabecera_perfil_visitante_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_perfil_visitante_ventanas.html
@@ -7,14 +7,14 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout spacing="false" margin="false">
-   <vaadin-vertical-layout size-full>
+  <vaadin-vertical-layout>
+   <vaadin-vertical-layout spacing="false" size-auto margin="false">
     <vaadin-horizontal-layout>
      <vaadin-horizontal-layout></vaadin-horizontal-layout>
      <vaadin-form-layout size-auto>
-      <vaadin-label plain-text>
+      <vaadin-button style-name="huge borderless borderless-colored" plain-text _id="logo">
         Garbiñe Youtube 
-      </vaadin-label>
+      </vaadin-button>
      </vaadin-form-layout>
      <vaadin-horizontal-layout>
       <vaadin-form-layout spacing="false" size-auto margin>
@@ -58,6 +58,9 @@
        <vaadin-button plain-text _id="suscribirse">
          Seguir Usuario 
        </vaadin-button>
+       <vaadin-label style-name="bold h2" plain-text _id="nombre">
+         Nombre 
+       </vaadin-label>
       </vaadin-form-layout>
      </vaadin-horizontal-layout>
     </vaadin-horizontal-layout>
