--- a/src/main/resources/ventanas/Zona_inicio_comun_ventanas.html
+++ b/src/main/resources/ventanas/Zona_inicio_comun_ventanas.html
@@ -7,8 +7,8 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout spacing="false" responsive size-auto margin="false">
-   <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical">
+  <vaadin-vertical-layout responsive margin="false">
+   <vaadin-vertical-layout spacing="false" margin="false" _id="vertical">
     <ventanas-videos_tendencias_ventanas responsive></ventanas-videos_tendencias_ventanas>
     <ventanas-videos_usuarios_registrados_ventanas responsive></ventanas-videos_usuarios_registrados_ventanas>
    </vaadin-vertical-layout>
