Se añade más funcionalidades

--- a/src/main/resources/ventanas/Ficha_video_ventanas.html
+++ b/src/main/resources/ventanas/Ficha_video_ventanas.html
@@ -71,6 +71,14 @@
         Etiquetas: Justin, Guitarra, Flamenco 
       </vaadin-label>
      </vaadin-horizontal-layout>
+     <vaadin-horizontal-layout>
+      <vaadin-label style-name="bold" plain-text>
+        Enlace: 
+      </vaadin-label>
+      <vaadin-label plain-text _id="enlace">
+        www.youtube.com 
+      </vaadin-label>
+     </vaadin-horizontal-layout>
     </vaadin-form-layout>
    </vaadin-panel>
   </vaadin-vertical-layout>
