--- a/src/main/resources/ventanas/Zona_opciones_video_propietario_ventanas.html
+++ b/src/main/resources/ventanas/Zona_opciones_video_propietario_ventanas.html
@@ -17,7 +17,7 @@
     <vaadin-button icon="fonticon://Vaadin-Icons/e7ff" plain-text _id="crear_lista_reproduccion">
       Crear lista reproducción 
     </vaadin-button>
-    <vaadin-native-select data-item-type="java.lang.String" _id="sample">
+    <vaadin-native-select data-item-type="java.lang.String" _id="anadirLista">
      <option item="Option1">Option 1</option>
      <option item="Option2">Option 2</option>
      <option item="Option3">Option 3</option>
