--- a/src/main/resources/ventanas/Zona_opciones_video_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_opciones_video_registrado_ventanas.html
@@ -16,9 +16,11 @@
    <vaadin-button icon="fonticon://Vaadin-Icons/e7ff" plain-text _id="crear_lista_reproduccion">
      Crear lista reproducción 
    </vaadin-button>
-   <vaadin-button icon="fonticon://Vaadin-Icons/e656" plain-text _id="anadir_lista">
-     Añadir a lista de reproducción 
-   </vaadin-button>
+   <vaadin-native-select data-item-type="java.lang.String" _id="anadirLista">
+    <option item="Option1">Option 1</option>
+    <option item="Option2">Option 2</option>
+    <option item="Option3">Option 3</option>
+   </vaadin-native-select>
   </vaadin-form-layout>
  </body>
 </html>
