--- a/src/main/resources/ventanas/Cabecera_buscador_ventanas.html
+++ b/src/main/resources/ventanas/Cabecera_buscador_ventanas.html
@@ -11,7 +11,7 @@
     <vaadin-label plain-text _id="garbiñe_youtube">
       Garbiñe YouTube 
     </vaadin-label>
-    <vaadin-text-field value="Buscar"></vaadin-text-field>
+    <vaadin-text-field placeholder="Buscar" _id="buscarTF"></vaadin-text-field>
     <vaadin-combo-box data-item-type="java.lang.String" _id="titulo">
      <option item="Option1">Option 1</option>
      <option item="Option2">Option 2</option>
