--- a/src/main/resources/ventanas/Lista_videos_buscados_ventanas.html
+++ b/src/main/resources/ventanas/Lista_videos_buscados_ventanas.html
@@ -4,13 +4,19 @@
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
   <meta name="vaadin-version" content="8.0.5">
+  <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
   <vaadin-vertical-layout>
-   <vaadin-label plain-text _id="lista_videos">
-     Resultado de busqueda: 
-   </vaadin-label>
-   <vaadin-list-select data-item-type="ventanas.Video_ventanas"></vaadin-list-select>
+   <vaadin-vertical-layout size-auto>
+    <vaadin-label plain-text _id="lista_videos">
+      Resultado de busqueda: 
+    </vaadin-label>
+    <vaadin-form-layout size-auto _id="form">
+     <ventanas-video></ventanas-video>
+     <ventanas-video></ventanas-video>
+    </vaadin-form-layout>
+   </vaadin-vertical-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
