--- a/src/main/resources/ventanas/Listado_suscripciones_visitante_ventanas.html
+++ b/src/main/resources/ventanas/Listado_suscripciones_visitante_ventanas.html
@@ -7,16 +7,24 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-panel size-full>
-   <vaadin-form-layout width="80%">
+  <vaadin-vertical-layout>
+   <vaadin-form-layout size-auto margin="false" :center>
     <vaadin-label plain-text _id="titulo">
       Listado de suscripciones de usuario x 
     </vaadin-label>
     <vaadin-label plain-text _id="subtitulo">
       Usuarios a los que sigue x: 
     </vaadin-label>
-    <ventanas-lista_usuarios_ventanas></ventanas-lista_usuarios_ventanas>
+    <vaadin-panel width-auto height="400px">
+     <vaadin-form-layout size-auto margin="false" _id="form">
+      <ventanas-lista_usuarios_ventanas></ventanas-lista_usuarios_ventanas>
+      <ventanas-lista_usuarios_ventanas></ventanas-lista_usuarios_ventanas>
+     </vaadin-form-layout>
+    </vaadin-panel>
+    <vaadin-button plain-text _id="atras">
+      Atrás 
+    </vaadin-button>
    </vaadin-form-layout>
-  </vaadin-panel>
+  </vaadin-vertical-layout>
  </body>
 </html>
