Se soluciona el bug del buscador.
-Falta dejar las ventanas más bonitas 
-Comprobar los diagramas

--- a/src/main/resources/ventanas/Lista_total_videos_subidos_ventanas.html
+++ b/src/main/resources/ventanas/Lista_total_videos_subidos_ventanas.html
@@ -13,7 +13,7 @@
       Lista de videos: 
     </vaadin-label>
     <vaadin-horizontal-layout>
-     <vaadin-text-field placeholder="Buscar video" _id="buscar_video_text_field"></vaadin-text-field>
+     <vaadin-text-field placeholder="Buscar video" _id="buscardorTF"></vaadin-text-field>
      <vaadin-button plain-text _id="buscar">
        Buscar 
      </vaadin-button>
