--- a/src/main/resources/ventanas/Usuario_ventanas.html
+++ b/src/main/resources/ventanas/Usuario_ventanas.html
@@ -12,9 +12,9 @@
      <vaadin-image width="180px" height="150px" _id="imagen"></vaadin-image>
     </vaadin-form-layout>
     <vaadin-form-layout spacing="false" size-auto margin="false" :bottom :right :expand="0.1">
-     <vaadin-label plain-text _id="nombre">
+     <vaadin-button style-name="link" plain-text _id="nombre">
        Nombre Apellidos1 Apellidos2 
-     </vaadin-label>
+     </vaadin-button>
     </vaadin-form-layout>
    </vaadin-horizontal-layout>
   </vaadin-vertical-layout>
