--- a/src/main/resources/ventanas/Lista_videos_ventanas.html
+++ b/src/main/resources/ventanas/Lista_videos_ventanas.html
@@ -3,12 +3,12 @@
  <head>
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
-  <meta name="vaadin-version" content="8.0.5">
+  <meta name="vaadin-version" content="8.1.5">
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
   <vaadin-panel responsive size-auto>
-   <vaadin-horizontal-layout responsive _id="horizontal">
+   <vaadin-horizontal-layout spacing="false" responsive width-full height="150px" _id="horizontal">
     <ventanas-video_ventanas responsive></ventanas-video_ventanas>
     <ventanas-video_ventanas responsive></ventanas-video_ventanas>
     <ventanas-video_ventanas responsive></ventanas-video_ventanas>
