Ajusta buscador y cabecera de inicio. Añade logo a página de invitado.

--- a/src/main/resources/ventanas/Cabecera_buscador_ventanas.html
+++ b/src/main/resources/ventanas/Cabecera_buscador_ventanas.html
@@ -8,7 +8,7 @@
  <body>
   <vaadin-vertical-layout height="150px">
    <vaadin-horizontal-layout size-full>
-    <vaadin-image width="300px" height="80px" :middle :right></vaadin-image>
+    <vaadin-image source="C:/Users/David/git/softcykas/src/main/resources/images/logo.png" width="250px" height="100px" _id="logo" :middle :right></vaadin-image>
     <vaadin-text-field placeholder="Buscar" _id="buscarTF" :middle :right></vaadin-text-field>
     <vaadin-combo-box data-item-type="java.lang.String" _id="titulo" :middle :right>
      <option item="Option1">Option 1</option>
