--- a/src/main/resources/ventanas/Zona_inicio_cabecera_invitado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_inicio_cabecera_invitado_ventanas.html
@@ -9,7 +9,7 @@
  <body>
   <vaadin-horizontal-layout responsive width-full margin>
    <vaadin-horizontal-layout width-full _id="buscador_layout" :center>
-    <ventanas-cabecera_buscador :middle :right></ventanas-cabecera_buscador>
+    <ventanas-cabecera_buscador width="1000px" :middle :right></ventanas-cabecera_buscador>
     <vaadin-button width="150px" plain-text _id="iniciar_sesion" :middle :right>
       Iniciar Sesión 
     </vaadin-button>
