--- a/src/main/resources/ventanas/Cabecera_buscador_ventanas.html
+++ b/src/main/resources/ventanas/Cabecera_buscador_ventanas.html
@@ -6,9 +6,9 @@
   <meta name="vaadin-version" content="8.1.5">
  </head>
  <body>
-  <vaadin-vertical-layout height="150px">
+  <vaadin-vertical-layout height="200px">
    <vaadin-horizontal-layout size-full>
-    <vaadin-image source="C:/Users/David/git/softcykas/src/main/resources/images/logo.png" width="250px" height="100px" _id="logo" :middle :right></vaadin-image>
+    <vaadin-image source="C:/Users/%username%/git/softcykas/src/main/resources/images/logo.png" width="250px" height="100px" _id="logo"></vaadin-image>
     <vaadin-text-field placeholder="Buscar" _id="buscarTF" :middle :right></vaadin-text-field>
     <vaadin-combo-box data-item-type="java.lang.String" _id="titulo" :middle :right>
      <option item="Option1">Option 1</option>
