Arregla ventanas perfil visitante.

--- a/src/main/resources/ventanas/Buscador_ventanas.html
+++ b/src/main/resources/ventanas/Buscador_ventanas.html
@@ -7,14 +7,14 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout>
-   <vaadin-vertical-layout size-auto margin="false" _id="vertical">
+  <vaadin-vertical-layout size-full>
+   <vaadin-vertical-layout margin="false" _id="vertical">
     <ventanas-zona_inicio_cabecera_invitado_ventanas _id="zcabecera"></ventanas-zona_inicio_cabecera_invitado_ventanas>
     <vaadin-label plain-text>
       El resultado de la busquda: 
     </vaadin-label>
-    <vaadin-panel size-auto>
-     <vaadin-form-layout width-auto height="40%" margin _id="formLista">
+    <vaadin-panel _id="panel">
+     <vaadin-form-layout size-auto margin _id="formLista">
       <ventanas-video_ventanas></ventanas-video_ventanas>
       <ventanas-video_ventanas></ventanas-video_ventanas>
       <ventanas-video_ventanas></ventanas-video_ventanas>
