--- a/src/main/resources/ventanas/Usuario_invitado_ventanas.html
+++ b/src/main/resources/ventanas/Usuario_invitado_ventanas.html
@@ -7,7 +7,7 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-panel>
+  <vaadin-panel size-full>
    <vaadin-vertical-layout _id="vertical">
     <ventanas-zona_inicio_cabecera_invitado_ventanas width-full height="200px" _id="cabecera"></ventanas-zona_inicio_cabecera_invitado_ventanas>
     <ventanas-zona_inicio_comun_ventanas width-full _id="comun"></ventanas-zona_inicio_comun_ventanas>
