--- a/src/main/resources/ventanas/Zona_cabecera_perfil_visitante_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_perfil_visitante_ventanas.html
@@ -3,19 +3,14 @@
  <head>
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
-  <meta name="vaadin-version" content="8.0.5">
+  <meta name="vaadin-version" content="8.1.5">
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
   <vaadin-vertical-layout>
    <vaadin-vertical-layout spacing="false" size-auto margin="false">
     <vaadin-horizontal-layout>
-     <vaadin-horizontal-layout></vaadin-horizontal-layout>
-     <vaadin-form-layout size-auto>
-      <vaadin-button style-name="huge borderless borderless-colored" plain-text _id="logo">
-        Garbiñe Youtube 
-      </vaadin-button>
-     </vaadin-form-layout>
+     <vaadin-image width="250px" height="100px" _id="logo"></vaadin-image>
      <vaadin-horizontal-layout>
       <vaadin-form-layout spacing="false" size-auto margin>
        <vaadin-label style-name="colored h1" plain-text _id="nVisitas">
@@ -64,9 +59,6 @@
       </vaadin-form-layout>
      </vaadin-horizontal-layout>
     </vaadin-horizontal-layout>
-   </vaadin-vertical-layout>
-   <vaadin-vertical-layout spacing="false" margin="false">
-    <vaadin-form-layout size-auto margin="false"></vaadin-form-layout>
    </vaadin-vertical-layout>
   </vaadin-vertical-layout>
  </body>
