--- a/src/main/resources/ventanas/Listas_de_reproduccion_ventanas.html
+++ b/src/main/resources/ventanas/Listas_de_reproduccion_ventanas.html
@@ -3,18 +3,16 @@
  <head>
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
-  <meta name="vaadin-version" content="8.0.5">
+  <meta name="vaadin-version" content="8.1.5">
  </head>
  <body>
-  <vaadin-vertical-layout width="70%">
-   <vaadin-form-layout size-auto margin="false">
-    <vaadin-label plain-text _id="titulo_listas_de_reproducion">
-      Listas de reproducición 
-    </vaadin-label>
-   </vaadin-form-layout>
-   <vaadin-panel width="70%">
-    <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical">
-     <vaadin-horizontal-layout margin _id="horizontal">
+  <vaadin-vertical-layout>
+   <vaadin-label plain-text _id="titulo_listas_de_reproducion">
+     Listas de reproducición 
+   </vaadin-label>
+   <vaadin-panel>
+    <vaadin-vertical-layout spacing="false" margin="false" _id="vertical">
+     <vaadin-horizontal-layout spacing="false" _id="horizontal">
       <vaadin-form-layout spacing="false" size-auto margin="false" _id="form">
        <vaadin-button style-name="huge primary" width="200px" height="100px" plain-text _id="lista12">
          Lista 1 
