Arregla ventanas de usuario registrado (visitante y propietario).

--- a/src/main/resources/ventanas/Listas_reproduccion_propias_ventanas.html
+++ b/src/main/resources/ventanas/Listas_reproduccion_propias_ventanas.html
@@ -3,12 +3,12 @@
  <head>
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
-  <meta name="vaadin-version" content="8.0.5">
+  <meta name="vaadin-version" content="8.1.5">
  </head>
  <body>
   <vaadin-panel size-full>
    <vaadin-vertical-layout size-auto>
-    <vaadin-form-layout size-auto>
+    <vaadin-form-layout size-auto margin-left margin-top="false" margin-bottom="false">
      <vaadin-label plain-text _id="lista_reproducion">
        Listas de reproducion 
      </vaadin-label>
@@ -21,7 +21,7 @@
     </vaadin-form-layout>
     <vaadin-form-layout spacing="false" size-auto margin="false" _id="listaLayout">
      <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical">
-      <vaadin-horizontal-layout margin _id="horizontal">
+      <vaadin-horizontal-layout spacing="false" _id="horizontal">
        <vaadin-form-layout spacing="false" size-auto margin="false" _id="form">
         <vaadin-button style-name="huge primary" width="200px" height="100px" plain-text _id="botonPrincipal">
           Lista 1 
