--- a/src/main/resources/ventanas/Videos_relacionados_ventanas.html
+++ b/src/main/resources/ventanas/Videos_relacionados_ventanas.html
@@ -3,18 +3,16 @@
  <head>
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
-  <meta name="vaadin-version" content="8.0.5">
+  <meta name="vaadin-version" content="8.1.5">
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout responsive width="70%">
-   <vaadin-form-layout size-auto>
-    <vaadin-label plain-text _id="videos_relacionados">
-      Videos relacionados 
-    </vaadin-label>
-   </vaadin-form-layout>
-   <vaadin-panel width="70%" _id="panel">
-    <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical">
+  <vaadin-vertical-layout responsive>
+   <vaadin-label plain-text _id="videos_relacionados">
+     Videos relacionados 
+   </vaadin-label>
+   <vaadin-panel _id="panel">
+    <vaadin-vertical-layout spacing="false" margin="false" _id="vertical">
      <ventanas-lista_videos_ventanas></ventanas-lista_videos_ventanas>
     </vaadin-vertical-layout>
    </vaadin-panel>
