--- a/src/main/resources/ventanas/Zona_inicio_cabecera_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_inicio_cabecera_registrado_ventanas.html
@@ -3,19 +3,17 @@
  <head>
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
-  <meta name="vaadin-version" content="8.0.5">
+  <meta name="vaadin-version" content="8.1.5">
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
   <vaadin-horizontal-layout responsive margin>
-   <vaadin-horizontal-layout _id="buscador_layout">
-    <ventanas-cabecera_buscador></ventanas-cabecera_buscador>
-   </vaadin-horizontal-layout>
-   <vaadin-horizontal-layout margin _id="iniciar_sesion_layout" :center>
-    <vaadin-button plain-text _id="mi_perfil">
+   <ventanas-cabecera_buscador :middle :center></ventanas-cabecera_buscador>
+   <vaadin-horizontal-layout spacing="false" _id="iniciar_sesion_layout" :middle :center>
+    <vaadin-button plain-text _id="mi_perfil" :middle :center>
       Mi Perfil 
     </vaadin-button>
-    <vaadin-button plain-text _id="cerrar_sesion">
+    <vaadin-button plain-text _id="cerrar_sesion" :middle :center>
       Cerrar Sesión 
     </vaadin-button>
    </vaadin-horizontal-layout>
