bug en la cabecera arreglado!!! (no funcionaba los botones de busqueda)

--- a/src/main/resources/ventanas/Zona_inicio_cabecera_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Zona_inicio_cabecera_administrador_ventanas.html
@@ -8,10 +8,10 @@
  </head>
  <body>
   <vaadin-horizontal-layout margin>
-   <vaadin-horizontal-layout _id="horizontal">
-    <ventanas-cabecera_buscador_ventanas></ventanas-cabecera_buscador_ventanas>
+   <vaadin-horizontal-layout _id="horizontal" :middle>
+    <ventanas-cabecera_buscador></ventanas-cabecera_buscador>
    </vaadin-horizontal-layout>
-   <vaadin-horizontal-layout margin :center>
+   <vaadin-horizontal-layout margin :middle :center>
     <vaadin-button plain-text _id="perfil">
       Perfil Administrador 
     </vaadin-button>
