--- a/src/main/resources/ventanas/Buscador_ventanas.html
+++ b/src/main/resources/ventanas/Buscador_ventanas.html
@@ -3,16 +3,18 @@
  <head>
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
-  <meta name="vaadin-version" content="8.1.5">
+  <meta name="vaadin-version" content="8.0.5">
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
   <vaadin-vertical-layout size-full>
-   <vaadin-vertical-layout margin="false" _id="vertical">
-    <ventanas-zona_inicio_cabecera_invitado_ventanas _id="zcabecera"></ventanas-zona_inicio_cabecera_invitado_ventanas>
-    <vaadin-label plain-text>
-      El resultado de la busquda: 
-    </vaadin-label>
+   <vaadin-vertical-layout size-auto margin="false" _id="vertical">
+    <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical2">
+     <ventanas-cabecera_buscador></ventanas-cabecera_buscador>
+     <vaadin-label plain-text>
+       El resultado de la busquda: 
+     </vaadin-label>
+    </vaadin-vertical-layout>
     <vaadin-panel _id="panel">
      <vaadin-form-layout size-auto margin _id="formLista">
       <ventanas-video_ventanas></ventanas-video_ventanas>
