--- a/src/main/resources/ventanas/Zona_cabecera_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_administrador_ventanas.html
@@ -3,14 +3,13 @@
  <head>
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
-  <meta name="vaadin-version" content="8.0.5">
+  <meta name="vaadin-version" content="8.1.5">
  </head>
  <body>
-  <vaadin-horizontal-layout width-full>
-   <vaadin-image width="250px" height="125px"></vaadin-image>
-   <vaadin-vertical-layout size-auto :right>
-    <vaadin-image width="250px" height="125px" _id="imagen"></vaadin-image>
-    <vaadin-button icon="fonticon://Vaadin-Icons/e7fa" style-name="link" plain-text _id="cambiar_imagen">
+  <vaadin-horizontal-layout spacing="false" width-full>
+   <vaadin-vertical-layout spacing="false" size-auto margin="false" :center>
+    <vaadin-image width="250px" height="125px" _id="imagen" :center></vaadin-image>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e7fa" style-name="link" plain-text _id="cambiar_imagen" :center>
       Cambiar Imagen 
     </vaadin-button>
    </vaadin-vertical-layout>
