--- a/src/main/resources/ventanas/Anadir_datos_video_ventanas.html
+++ b/src/main/resources/ventanas/Anadir_datos_video_ventanas.html
@@ -8,14 +8,14 @@
  <body>
   <vaadin-vertical-layout responsive size-auto margin="false">
    <vaadin-form-layout size-auto heigth="453px" margin="false" :center>
-    <vaadin-text-field caption="Titulo" _id="titulo"></vaadin-text-field>
-    <vaadin-native-select caption="Categoria" data-item-type="java.lang.String" _id="categoria">
+    <vaadin-text-field caption="Titulo*" _id="titulo"></vaadin-text-field>
+    <vaadin-native-select caption="Categoria*" data-item-type="java.lang.String" _id="categoria">
      <option item="Option1">Option 1</option>
      <option item="Option2">Option 2</option>
      <option item="Option3">Option 3</option>
     </vaadin-native-select>
     <vaadin-text-field caption="Etiqueta" _id="Etiqueta"></vaadin-text-field>
-    <vaadin-text-field caption="Ruta video" _id="rutaVideo"></vaadin-text-field>
+    <vaadin-text-field caption="Ruta video*" _id="rutaVideo"></vaadin-text-field>
     <vaadin-text-field caption="Ruta miniatura" _id="rutaMiniatura"></vaadin-text-field>
     <vaadin-label caption="Descripción video" componentalignment="TOP-LEFT" plain-text _id="descripcion_video"></vaadin-label>
     <vaadin-horizontal-layout>
