Se añade metodo cambiar contraseña

--- a/src/main/resources/ventanas/Categorias_ventanas.html
+++ b/src/main/resources/ventanas/Categorias_ventanas.html
@@ -6,16 +6,24 @@
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
-  <vaadin-horizontal-layout>
-   <vaadin-label plain-text _id="nombre_categoria">
-     Nombre categoría 
-   </vaadin-label>
-   <vaadin-button plain-text _id="modificar_categoria_button">
-     Modificar 
-   </vaadin-button>
-   <vaadin-button plain-text _id="eliminar_categoria_button">
-     Eliminar 
-   </vaadin-button>
-  </vaadin-horizontal-layout>
+  <vaadin-vertical-layout margin="false">
+   <vaadin-vertical-layout size-auto :center>
+    <vaadin-form-layout size-auto>
+     <vaadin-label plain-text _id="crear_categoria_label">
+       Modificar categoría: 
+     </vaadin-label>
+     <vaadin-text-field caption="Nombre categoria" placeholder="Nombre categoría" _id="nombre_categoria1"></vaadin-text-field>
+     <vaadin-text-field caption="Edad permitda" placeholder="Ej: +3,+7,+12,+16..." _id="edad_permitida"></vaadin-text-field>
+     <vaadin-horizontal-layout>
+      <vaadin-button plain-text _id="atras">
+        Atrás 
+      </vaadin-button>
+      <vaadin-button plain-text _id="crear_categoria_button">
+        Modificar 
+      </vaadin-button>
+     </vaadin-horizontal-layout>
+    </vaadin-form-layout>
+   </vaadin-vertical-layout>
+  </vaadin-vertical-layout>
  </body>
 </html>
