--- a/src/main/resources/ventanas/Crear_categoria_ventanas.html
+++ b/src/main/resources/ventanas/Crear_categoria_ventanas.html
@@ -22,6 +22,13 @@
      </vaadin-button>
     </vaadin-horizontal-layout>
    </vaadin-form-layout>
+   <vaadin-vertical-layout size-auto margin="false" _id="vetical" :center>
+    <vaadin-form-layout size-auto margin="false" _id="formLayout">
+     <vaadin-button style-name="link" plain-text>
+       Button 
+     </vaadin-button>
+    </vaadin-form-layout>
+   </vaadin-vertical-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
